syntax = "proto3";
package notes_api;

option go_package = "./notes_api";

import "google/protobuf/timestamp.proto";

message Note {
  string id = 1; // UUID
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp created = 4;
}

message SearchNotesRequest {}
message SearchNotesResponse{
  repeated Note notes = 3;
}

message CreateNoteRequest {
  string title = 1;
  string content = 2;
}

message CreateNoteResponse {
  string id = 1;
}

service NoteService {
  rpc Search(SearchNotesRequest) returns (SearchNotesResponse);
  rpc Create(CreateNoteRequest) returns (CreateNoteResponse);
}